# QT-BLE

./: BlePresenceConfig.h  CMakeLists.txt  Main.qml  PresenceAdvertiser.cpp  PresenceAdvertiser.h  PresenceScanner.cpp  PresenceScanner.h  README.md  SecurityUtils.cpp  SecurityUtils.h  main.cpp
android/: AndroidManifest.xml  gradle.properties
